# rust-rocket-api

./: Cargo.toml
twitter-crud/: Cargo.toml  README.md  Rocket.toml  schema.sql
twitter-crud/src/: main.rs
twitter-crud/src/database/: mod.rs
twitter-crud/src/routes/: mod.rs  posts.rs  users.rs
