[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[workspace]
package.authors = ["felpofo <felpofo@proton.me>"]
members = ["twitter-crud"]

[workspace.dependencies]
rocket = "=0.5.0-rc.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
rocket_db_pools = "0.1.0-rc.3"

[dependencies]
