[package]
name = "twitter-crud"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
rocket = { workspace = true, features = ["serde_json", "json", "uuid"] }
rocket_db_pools = { workspace = true, features = ["sqlx_sqlite"] }
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true